minor fix of nav visibility

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -1054,6 +1054,7 @@ body {
   left: 0;
   z-index: 1500;
   opacity: 0;
+  visibility: hidden;
   width: 0;
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
@@ -1096,6 +1097,7 @@ body {
 .navigation__checkbox:checked ~ .navigation__nav {
   opacity: 1;
   width: 100%;
+  visibility: visible;
 }
 .navigation__icon {
   position: relative;
